--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.18.2",
     "classnames": "^2.2.5",
     "flux": "^3.1.3",
+    "gitlab": "^1.7.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.3.0",
